added argument factory, fixed compile errors

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,6 +1,6 @@
 cmake_minimum_required(VERSION 3.11)
 
-project(ikarus-proto)
+project(icarus-proto)
 
 set(CMAKE_CXX_STANDARD 17)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
@@ -8,9 +8,9 @@ set(CMAKE_CXX_STANDARD_REQUIRED ON)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/out)
 
 file(GLOB CL_HEADERS
-    ikarus-proto/protocol/*.h
-    ikarus-proto/net/*.h
+    icarus-proto/protocol/*.h
+    icarus-proto/net/*.h
 )
 
-add_library(ikarus-proto INTERFACE ${CL_HEADERS})
-target_include_directories(ikarus-proto INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
+add_library(icarus-proto INTERFACE ${CL_HEADERS})
+target_include_directories(icarus-proto INTERFACE ${CMAKE_CURRENT_SOURCE_DIR})
