--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -1,8 +1,8 @@
 cmake_minimum_required(VERSION 3.11)
 
-project(sample)
+project(simple-client)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
@@ -13,6 +13,6 @@ file(GLOB SAMPLE_HEADERS
 file(GLOB SAMPLE_SOURSES
     *.cpp)
 
-add_executable(sample ${SAMPLE_HEADERS} ${SAMPLE_SOURSES})
+add_executable(simple-client ${SAMPLE_HEADERS} ${SAMPLE_SOURSES})
 target_link_libraries(icarus-proto)
-target_include_directories(sample PUBLIC ../lib)
+target_include_directories(simple-client PUBLIC ../lib)
