renamed lib, added tls skeleton

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -1,27 +1,36 @@
-cmake_minimum_required(VERSION 3.11)
+cmake_minimum_required(VERSION 3.27)
 
-project(icarus-proto)
+project(hope-io)
 
-set(CMAKE_CXX_STANDARD 17)
+set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/out)
 
 file(GLOB CL_HEADERS
-    icarus-proto/proto/*.h
-    icarus-proto/proto2/*.h
-    icarus-proto/net/*.h
-    icarus-proto/net/win/*.h
-    icarus-proto/net/nix/*.h
+    hope-io/proto/*.h
+    hope-io/proto2/*.h
+    hope-io/net/*.h
+    hope-io/net/win/*.h
+    hope-io/net/nix/*.h
+    hope-io/net/tls/*.h
 )
 
 file(GLOB CL_SOURCES
-    icarus-proto/proto/*.cpp
-    icarus-proto/proto2/*.cpp
-    icarus-proto/net/*.cpp
-    icarus-proto/net/win/*.cpp
-    icarus-proto/net/nix/*.cpp
+    hope-io/proto/*.cpp
+    hope-io/proto2/*.cpp
+    hope-io/net/*.cpp
+    hope-io/net/win/*.cpp
+    hope-io/net/nix/*.cpp
+    hope-io/net/tls/*.cpp
 )
 
-add_library(icarus-proto STATIC ${CL_HEADERS} ${CL_SOURCES})
-target_include_directories(icarus-proto PUBLIC ../lib)
+add_library(hope-io STATIC ${CL_HEADERS} ${CL_SOURCES})
+
+#set(OPENSSL_USE_STATIC_LIBS TRUE)
+#find_package(OpenSSL REQUIRED)
+
+#add_executable(${PROJECT_NAME} ${SOURCE_FILES})
+#target_link_libraries(${PROJECT_NAME} OpenSSL::Crypto)
+
+target_include_directories(hope-io PUBLIC ../lib)
