tls client-server sample

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -27,11 +27,9 @@ file(GLOB CL_SOURCES
 
 add_library(hope-io STATIC ${CL_HEADERS} ${CL_SOURCES})
 
-#set(OPENSSL_USE_STATIC_LIBS TRUE)
 find_package(OpenSSL REQUIRED)
 
-#add_executable(${PROJECT_NAME} ${SOURCE_FILES})
-#target_link_libraries(${PROJECT_NAME} OpenSSL::Crypto)
-
 target_include_directories(hope-io PUBLIC ../lib)
+
+set(OPENSSL_USE_STATIC_LIBS TRUE)
 include_directories(${OPENSSL_INCLUDE_DIR})
