--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -1,24 +1,10 @@
-cmake_minimum_required(VERSION 3.11)
+cmake_minimum_required(VERSION 3.22)
 
-project(echo-client-server)
+project(samples)
 
 set(CMAKE_CXX_STANDARD 20)
 set(CMAKE_CXX_STANDARD_REQUIRED ON)
 
-set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
-
-file(GLOB SAMPLE_HEADERS
-    *.h)
-
-file(GLOB SAMPLE_SOURSES
-    *.cpp)
-
-add_executable(echo-client-server ${SAMPLE_HEADERS} ${SAMPLE_SOURSES})
-target_link_libraries(echo-client-server hope-io)
-
-find_package(OpenSSL REQUIRED)
-target_include_directories(echo-client-server PUBLIC ../lib)
-
-set(OPENSSL_USE_STATIC_LIBS TRUE)
-target_link_libraries(${PROJECT_NAME} OpenSSL::Crypto)
-target_link_libraries(${PROJECT_NAME} OpenSSL::SSL)
+add_subdirectory(binance)
+add_subdirectory(proto)
+add_subdirectory(telegram)
