Set SNI on TLS connection to fix Bybit API connection

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -39,8 +39,7 @@ if (OPENSSL_FOUND)
     set(OPENSSL_USE_STATIC_LIBS TRUE)
     include_directories(${OPENSSL_INCLUDE_DIR})
 
-    target_link_libraries(${PROJECT_NAME} OpenSSL::Crypto)
-    target_link_libraries(${PROJECT_NAME} OpenSSL::SSL)
+    target_link_libraries(${PROJECT_NAME} ${OPENSSL_LIBRARIES})
 else ()
     message("Hope-io/ OPenSSl not found, tls features is not available")
 endif ()
