[kv] now set request works

--- a/test/CMakeLists.txt
+++ b/test/CMakeLists.txt
@@ -1,4 +1,4 @@
-set(BINARY icarustest)
+set(BINARY hope-io-test)
 
 # Download and unpack googletest at configure time
 configure_file(CMakeLists.txt.in googletest-download/CMakeLists.txt)
@@ -32,7 +32,7 @@ if (CMAKE_VERSION VERSION_LESS 2.8.11)
   include_directories("${gtest_SOURCE_DIR}/include" )
 endif()
 
-include_directories("../lib")
+include_directories("../lib", "../samples")
 add_definitions(-D_ENABLE_EXTENDED_ALIGNED_STORAGE=1)
 set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)
 
