added basic profiler marks

--- a/samples/CMakeLists.txt
+++ b/samples/CMakeLists.txt
@@ -15,7 +15,9 @@ foreach(source ${SAMPLE_CORE_SOURCES})
     add_executable(${target_name} ${filename})
 
     target_include_directories(${target_name} PUBLIC ../../lib)
+    target_include_directories(${target_name} PUBLIC ../third-party/easy_profiler/easy_profiler_core/include)
 
+    target_link_libraries(${target_name} easy_profiler)
     target_link_libraries(${target_name} hope-io)
 
 endforeach()
