--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -43,5 +43,5 @@ else ()
     message("Hope-io/ OPenSSl not found, tls features is not available")
 endif ()
 
-target_include_directories(hope-io PUBLIC ../lib)
-
+target_include_directories(${PROJECT_NAME} PUBLIC ../lib)
+target_include_directories(${PROJECT_NAME} PUBLIC ../third_party/easy_profiler/easy_profiler_core/include)
