made it ue compatible

--- a/lib/CMakeLists.txt
+++ b/lib/CMakeLists.txt
@@ -44,14 +44,20 @@ else ()
 endif ()
 
 if(UNIX AND NOT APPLE)
-    set(LINUX TRUE)
-endif()
-
-if(LINUX) 
+    add_definitions(-DPLATFORM_LINUX=1)
+    add_definitions(-DPLATFORM_APPLE=0)
+    add_definitions(-DPLATFORM_WINDOWS=0)
     message(STATUS ">>> Linux")
-    add_definitions(-DPLATFORM_LINUX)
+elseif(APPLE)
+    add_definitions(-DPLATFORM_LINUX=0)
+    add_definitions(-DPLATFORM_APPLE=1)
+    add_definitions(-DPLATFORM_WINDOWS=0)
+    message(STATUS ">>> Apple")
 else()
-    message(STATUS ">>> Apple or Win")
+    add_definitions(-DPLATFORM_LINUX=0)
+    add_definitions(-DPLATFORM_APPLE=0)
+    add_definitions(-DPLATFORM_WINDOWS=1)
+    message(STATUS ">>> Windows")
 endif()
 
 target_include_directories(${PROJECT_NAME} PUBLIC ../lib)
